--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="box bb-0 br-0"><span class="boxtext"></span></div>
       </div>
       <div class="gameInfo">
-        <h1>Welcome to ❌⭕MyTicTacToe⭕❌</h1>
+        <h1>Welcome to ❌⭕MyTicTacToe⭕❌ 🥇🏅🎖️🏆🎮🧩</h1>
         <div>
           <span class="info">Turn for X</span>
           <button id="reset">Reset</button>
